--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ packages = [{include = "cdk_lab_eice"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-aws-cdk-lib = "2.90.0"
+aws-cdk-lib = ">=2.90.0"
 constructs = ">=10.0.0,<11.0.0"
 
 
